# csvss

./: README.md  build_report.py  generate_test_runs.py  main.py  pyproject.toml
module/: README.md  pyproject.toml  requirements.txt
module/cssplt/: __init__.py  plt.py
module/cssplt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
module/cssplt/core/: __init__.py  axes.py  figure.py  render.py  state.py  theme.py  utils.py
module/cssplt/plots/: __init__.py  heatmap.py  kde.py  radar.py
module/cssplt/security/: __init__.py  sanitize.py
module/examples/: demo_linked.html  demo_linked.py  generate_demo_data.py
module/examples/data/: README.txt  demo_heatmap.csv  demo_kde.csv  demo_radar.csv
plots/: generator.py  heatmap.py  sanitize_html.py
plots/data/: data.csv  data.sanitized.csv  spec.csv
sample_runs/run_01/: qra.csv  schema.csv
sample_runs/run_02/: qra.csv  schema.csv
sample_runs/run_03/: qra.csv  schema.csv
sample_runs/run_04/: qra.csv  schema.csv
