[project]
name = "cssplt"
version = "0.1.0"
description = "Single-file HTML+CSS-only interactive plots (no JavaScript)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cssplt*"]
